# math-4383-project

./: CMakeLists.txt  README.md
include/: monte_carlo.h  radiosity.h  scene_loader.h
src/: main.cpp  main.js  monte_carlo.cpp  radiosity.cpp  scene_loader.cpp
